--- a/常用配置文件.md
+++ b/常用配置文件.md
@@ -1,27 +1,25 @@
+```
 module.exports = {
   env: {
     browser: true,
     es2021: true,
   },
   extends: [
-    'plugin:vue/vue3-recommended',
-    'plugin:@typescript-eslint/recommended',
+    'plugin:vue/vue3-essential',
+    'standard-with-typescript',
     'plugin:prettier/recommended',
   ],
   overrides: [],
   parser: 'vue-eslint-parser',
   parserOptions: {
-    parser: '@typescript-eslint/parser',
-    ecmaVersion: 2020,
+    ecmaVersion: 'latest',
     sourceType: 'module',
-    jsxPragma: 'React',
-    ecmaFeatures: {
-      jsx: true,
-    },
+    parser: '@typescript-eslint/parser',
   },
-  // plugins: ['vue', 'prettier'],
+  plugins: ['vue', 'prettier'],
   rules: {
-    'vue/script-setup-uses-vars': 'error',
+    'vue/no-v-html': 'off',
+    'vue/script-setup-uses-vars': 'off',
     '@typescript-eslint/ban-ts-ignore': 'off',
     '@typescript-eslint/explicit-function-return-type': 'off',
     '@typescript-eslint/no-explicit-any': 'off',
@@ -49,7 +47,6 @@ module.exports = {
       },
     ],
     'space-before-function-paren': 'off',
-
     'vue/attributes-order': 'off',
     'vue/one-component-per-file': 'off',
     'vue/html-closing-bracket-newline': 'off',
@@ -71,14 +68,19 @@ module.exports = {
         math: 'always',
       },
     ],
+    'vue/multi-word-component-names': 'off',
+    'vue/no-parsing-error': ['off'],
+    'eol-last': 'off',
     // prettier规则
-    // 'prettier/prettier': [
-    //   'error',
-    //   {
-    //     singleQuote: true,
-    //     // parser: 'flow',
-    //     endOfLine: 'auto',
-    //   },
-    // ],
+    'prettier/prettier': [
+      'error',
+      {
+        singleQuote: true,
+        // parser: 'flow',
+        endOfLine: 'auto',
+      },
+    ],
   },
 }
+
+```
